# celestial-inference

./: README.md  compose.yaml
.github/workflows/: deploy-staging.yml  deploy.yml
src/backend/: Dockerfile  Dockerfile.dev  main.py  pyproject.toml
src/backend/services/: bigquery_service.py
terraform/: .gitignore
terraform/environments/prod/: main.tf  variables.tf
terraform/environments/staging/: main.tf  variables.tf
terraform/modules/inference_service/: main.tf  variables.tf
